<?xml version="1.0" encoding="UTF-8"?>
<project name="PadronElectoral" default="run" basedir=".">

    <!-- Propiedades del proyecto -->
    <property name="src.dir"      value="src"/>
    <property name="build.dir"    value="build"/>
    <property name="classes.dir"  value="${build.dir}/classes"/>
    <property name="jar.dir"      value="${build.dir}/jar"/>
    <property name="lib.dir"      value="lib"/>
    <property name="jar.file"     value="${jar.dir}/PadronElectoral.jar"/>
    <property name="main.class"   value="padron.Main"/>
    <property name="encoding"     value="UTF-8"/>
    <property name="java.release" value="23"/>

    <!-- Classpath -->
    <path id="classpath">
        <fileset dir="${lib.dir}" includes="**/*.jar" erroronmissingdir="false"/>
        <pathelement location="${classes.dir}"/>
    </path>

    <!-- Target: clean -->
    <target name="clean" description="Eliminar archivos compilados">
        <delete dir="${build.dir}"/>
        <echo message="Directorio build eliminado."/>
    </target>

    <!-- Target: init -->
    <target name="init" description="Crear directorios necesarios">
        <mkdir dir="${classes.dir}"/>
        <mkdir dir="${jar.dir}"/>
        <echo message="Directorios creados."/>
    </target>

    <!-- Target: compile -->
    <target name="compile" depends="init" description="Compilar fuentes Java 21 con --enable-preview">
        <javac srcdir="${src.dir}"
               destdir="${classes.dir}"
               encoding="${encoding}"
               includeantruntime="false"
               release="${java.release}"
               fork="true">
            <compilerarg value="--enable-preview"/>
            <classpath refid="classpath"/>
        </javac>
        <echo message="Compilacion completada."/>
    </target>

    <!-- Target: jar -->
    <target name="jar" depends="compile" description="Empaquetar en JAR ejecutable">
        <jar destfile="${jar.file}" basedir="${classes.dir}">
            <manifest>
                <attribute name="Main-Class" value="${main.class}"/>
                <attribute name="Class-Path" value="."/>
            </manifest>
        </jar>
        <echo message="JAR generado: ${jar.file}"/>
    </target>

    <!-- Target: run -->
    <target name="run" depends="jar" description="Ejecutar la aplicacion">
        <java jar="${jar.file}"
              fork="true"
              failonerror="true">
            <jvmarg value="--enable-preview"/>
        </java>
    </target>

    <!-- Target: test-compile -->
    <target name="test-compile" depends="compile" description="Compilar clases de prueba">
        <mkdir dir="${build.dir}/test-classes"/>
        <javac srcdir="test"
               destdir="${build.dir}/test-classes"
               encoding="${encoding}"
               includeantruntime="false"
               release="${java.release}"
               fork="true">
            <compilerarg value="--enable-preview"/>
            <classpath>
                <pathelement location="${classes.dir}"/>
            </classpath>
        </javac>
        <echo message="Compilacion de pruebas completada."/>
    </target>

    <!-- Target: test -->
    <target name="test" depends="test-compile" description="Ejecutar pruebas automatizadas">
        <java classname="padron.test.TestRunner"
              fork="true"
              failonerror="true">
            <jvmarg value="--enable-preview"/>
            <classpath>
                <pathelement location="${classes.dir}"/>
                <pathelement location="${build.dir}/test-classes"/>
            </classpath>
        </java>
    </target>

</project>
